# photosafe

./: .env.example  .env.production.example  .gitignore  .gitmodules  .sops.yaml  BGUpload.swift  CLAUDE.md  CONTRIBUTING.md  DOCKER_COMPOSE_MIGRATION.md  DOCKER_MIGRATION.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_SUMMARY.md  PARITY_REPORT.md  PARITY_SUMMARY.md  README.md  REFRESH_TOKEN.md  SEARCH_FEATURE.md  build.sh  docker-compose.override.yml  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  mise.toml  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: backend-tests.yml  build-and-push.yml  dependabot-auto-merge.yml  deploy.yml  frontend-tests.yml
PhotoBrowse.xcodeproj/: project.pbxproj
Shared/: AssetGridViewController.swift
backend/: .env.example  .gitignore  AUTH_IMPLEMENTATION.md  CLI_IMPLEMENTATION_SUMMARY.md  CLI_README.md  Dockerfile  EMAIL_NOTIFICATIONS.md  EXIF_COMPARISON_SUMMARY.md  IMPLEMENTATION_METADATA.md  IMPLEMENTATION_SUMMARY.md  INDEXES.md  METADATA_FEATURE.md  METADATA_IMPORT.md  MIGRATIONS.md  MIGRATION_IMPLEMENTATION.md  MIGRATION_NOTES.md  PERSONAL_ACCESS_TOKENS.md  QUICKSTART_EXIF.md  SQLMODEL_MIGRATION.md  SYNC_COMMANDS.md  SYNC_PHOTOS_LINUX.md  TASK_SYSTEM.md  alembic.ini  demo_auth.py  demo_exif_comparison.py  demo_metadata_import.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup.py  test_auth_photos.py  test_blocks.py  test_cli.py  test_filtered_filters.py  test_filtering.py  test_import_metadata.py  test_indexes.py  test_library_upsert.py  test_limit_filter_order.py  (+7 more)
backend/alembic/: env.py
backend/alembic/versions/: 0b9dc23328e1_add_indexes_to_foreign_keys.py  2025_12_19_0432-56e129aeabb7_.py  2025_12_19_1152-3d37c5fa1b75_add_gin_index_to_search_info.py  2025_12_19_1755-868ffb01c651_add_photo_metadata_table.py  2025_12_20_1940_add_task_and_place_summary_tables.py  2025_12_20_2230-7f412add73fe_.py  2025_12_21_1245-622445ac768c_add_search_info.py  2026_01_13_0935-6324284fb717_add_unique_constraint_on_latitude_.py  2026_01_15_0500_add_personal_access_tokens_table.py  2026_01_18_0100_add_apple_credentials_and_auth_sessions.py  49348f7a48f6_initial_migration_with_user_photo_album_.py  9a6c7f6b7d7a_add_indexes_to_photos_table.py  9e32c1812b65_convert_uuid_fields_to_postgres_uuid.py  a1b2c3d4e5f6_convert_to_postgresql_jsonb_array.py  c71fdf3b7df8_add_library_model_for_multiple_.py  d8e9f0a1b2c3_add_deleted_at_to_photos.py  e1f2a3b4c5d6_add_search_data_table.py
backend/app/: EXIF_UTILS_README.md  apple_auth.py  auth.py  database.py  email.py  exif_utils.py  main.py  models.py  schemas.py  utils.py  version.py
backend/app/routers/: __init__.py  albums.py  apple.py  auth.py  photos.py  places.py  search.py
backend/cli/: __init__.py  import_commands.py  library_commands.py  main.py  maintenance_commands.py  sync_commands.py  sync_tools.py  task_commands.py  user_commands.py
backend/fixtures/: icloud_sample.json  macos_sample.json
backend/tests/: README.md  __init__.py  conftest.py
backend/tests/fixtures/: __init__.py
backend/tests/integration/: __init__.py  demo_refresh_manual.py  test_albums.py  test_auth_photos.py  test_cli.py  test_error_handling.py  test_import_metadata.py  test_library_upsert.py  test_macos_404_handling.py  test_migrations.py  test_personal_access_tokens.py  test_photo_metadata_api.py  test_search.py  test_sync.py  test_sync_commands.py  test_sync_macos.py  test_upload.py  test_versions_preselection.py
backend/tests/unit/: __init__.py  test_blocks.py  test_email.py  test_exif_utils.py  test_filtering.py  test_maintenance_commands.py  test_null_handling.py  test_photo_metadata.py  test_search_data.py  test_tasks.py  test_version.py
dump/: apple.sample.json  apple.sample.xmp  civitai-generation.json  civitai-generation.xmp  convert_to_markdown.py  convert_to_xmp.py  extract_civit.py  extract_dump.py  invoke.py  leonardo.py  mage.py  mage.sample.json  mage.sample.xmp  moments.py  process_civitai.py  process_comfyui.py  process_invoke.py  process_leonardo.py  process_mage.py  prompt.json  rename.py  requirements.txt  sample.json  walk.py  walk_obsidian.py  workflow.json  workflow_cleaned.json
frontend/: .gitignore  DUPLICATION_REDUCTION_SUMMARY.md  Dockerfile  SHARED_UTILITIES.md  TYPESCRIPT_CONVERSION.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.vue  components.d.ts  config.test.ts  config.ts  main.ts  style.css  vite-env.d.ts
iOS/: Info.plist
iosapp/: BGUpload.swift
iosapp/PhotoBrowse.xcodeproj/: project.pbxproj
iosapp/Shared/: AppDelegate.swift  AssetGridViewController.swift
k8s/: setup.sh  teardown.sh
k8s/base/: backend.yaml  configmap.yaml  frontend.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  postgres-init.yaml  postgres.yaml  secret.yaml
legacy/: .dockerignore  .gitignore  .pre-commit-config.yaml  README.rst  requirements.txt
legacy/config/: api_router.py  celery_app.py  wsgi.py
legacy/docs/: users.rst
legacy/icloud-api/: api.yaml  package.json
legacy/sync_photos/: requirements.txt  tools.py
legacy/sync_photos_linux/: photo_sync.py  tools.py
photosafe/: .dockerignore  .editorconfig  CONTRIBUTORS.txt  LICENSE  local.yml  manage.py  package-lock.json  package.json  production.yml  requirements.txt  setup.cfg
photosafe/config/: api_router.py  urls.py  wsgi.py
photosafe/docs/: conf.py  howto.rst  index.rst  make.bat  photos.rst
photosafe/frontend/: package-lock.json  package.json  postcss.config.js  tailwind.config.js
photosafe/icloud-api/: package-lock.json  package.json
photosafe/photosafe/: conftest.py
photosafe/requirements/: base.txt  local.txt  production.txt
photosafe/sync_photos/: requirements.txt  sync_photos.py  tools.py
photosafe/sync_photos_linux/: leonardo.py  (+2 more)
scripts/: README.md  mage_download.py  mage_generate.py
tvOS/: Info.plist
v2/: .env  docker-compose.yml
(+177 files in other folders)
