[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photosafe"
version = "1.0.13"
description = "PhotoSafe Gallery - A modern photo gallery application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "fastapi>=0.115.5",
    "sqlalchemy>=2.0.36",
    "sqlmodel>=0.0.22",
    "boto3>=1.34.0",
    "uvicorn[standard]>=0.32.1",
    "python-multipart>=0.0.18",
    "pydantic>=2.10.3",
    "aiofiles>=24.1.0",
    "pillow>=11.0.0",
    "python-jose[cryptography]>=3.4.0",
    "bcrypt<4",
    "passlib[bcrypt]",
    "pydantic-settings>=2.6.1",
    "alembic>=1.17.2",
    "psycopg2-binary>=2.9.10",
    "python-ulid>=2.3.0",
    "requests>=2.31",
    "python-dateutil>=2.8.0",
    "tqdm>=4.66",
    "pytz>=2024.1",
]

[project.optional-dependencies]
macos = [
    "osxphotos>=0.60",
]
icloud = [
    "pyicloud @ git+https://github.com/jmelloy/pyicloud.git",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "httpx>=0.24.0",
]

[project.scripts]
photosafe = "cli.main:cli"

[tool.setuptools]
packages = { find = {} }
include-package-data = true

[tool.setuptools.package-dir]
"" = "."
